# dspic33ck-devboard

./: CMakeLists.txt  toolchain.cmake
nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: io.c  io.h  main.c  main.h  port.c  port.h  system.c  system.h  types.h
